(lang dune 3.15)

(name lawrence)

(generate_opam_files true)

(source
 (github ggsmith842/lawrence))

(authors "ggsmith842")

(maintainers "ggsmith842")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name lawrence)
 (synopsis "A library of nonparametric tests and statistics")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
